fix nav spacing

--- a/reels-app/src/styles/nav.scss
+++ b/reels-app/src/styles/nav.scss
@@ -7,20 +7,27 @@
 	width: 100%;
   	position: sticky;
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-between;
 	align-items: center;
 
 	div {
 		width: 400px;
 		display: flex;
 		justify-content: space-evenly;
-		
 	}
 
 	a.title {
 		all: unset;
 		cursor: pointer;
 		font-size: 1.4rem;
+	}
+
+	h1 {
+		padding-left: 30px;
+	}
+
+	svg {
+		padding-right: 30px;
 	}
 
 	box-shadow: inset 0px -1px 2px $tiffany-blue, 0 2px 6px -2px black; //popout look
